# path-minimized-latent-odes

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml
pathminLODE/: generate_dho.py  lode.py  plot_dho_demo.py  requirements.txt  train.py
tests/: conftest.py  test_demo_plot.py  test_generate_dho.py  test_trainer.py  test_training.py
