[project]
name = "path-minimized-lode"
version = "0.1.0"
description = "Path-Minimizing Latent ODEs for Improved Extrapolation and Inference"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [
    { name = "Matt L. Sampson", email = "matt.sampson@princeton.edu" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "jaxlib>=0.4.13",
    "numpy>=1.21",
    "diffrax>=0.4.1",
    "equinox>=0.10.1",
    "optax>=0.1.5",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pathminLODE"]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
